# YOLO-One

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build_mobile_directory.py  requirements.txt  setup.py  test_0
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: benchmarks.yml  build_wheels.yml  ci.yml  docs.yml
benchmarks/: accuracy_evaluation.py  channel.py  export_yolov8.py  memory_profiling.py  mobile_benchmarks.py  performance_suite.py  profiler.py  ultralitics.py
benchmarks/results/: README.md
bindings/: CMakeLists.txt  detector_bind.cpp  utils_bind.cpp  yolo_one_bind.cpp
configs/: yolo_one_large.yaml  yolo_one_medium.yaml  yolo_one_nano.yaml
configs/training/: mobile_optimized.yaml  speed_focused.yaml
cpp/tests/: CMakeLists.txt  benchmark_performance.cpp  test_core.cpp  (+2 more)
data/: .gitkeep  README.md  make_directory.py
docker/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu  docker-compose.yml  entrypoint.sh
docs/: api_reference.md  benchmarks.md  deployment.md  index.md  installation.md  quickstart.md  training.md
mobile/: README.md  build_mobile.sh
models/: README.md  download_weights.py
paper/: README.md  bibliography.bib  yolo_one_paper.tex
python/: MANIFEST.in  pyproject.toml  setup.cfg  setup.py
scripts/: benchmark.py  detect.py  download_models.py  eval.py  export.py  train.py
tests/: test_architecture.py  test_dataloader.py
yolo_one/: __init__.py  datasets.py  detect.py  inference.py  losses.py  mcp_server.py  metrics.py  optimizer.py  training.py
(+130 files in other folders)
